ch02-jpa-start1/src/main/kube/ch5/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
