ch02-jpa-start1/src/main/kube/ch5/kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None   #이부분이 헤드리스 서비스로 만듬
  ports:
    - port: 80
      targetPort: 28080
  selector:
    app: kubia
