ch02-jpa-start1/src/main/kube/ch5/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubia-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kubia
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kubia
